# breakdown

./: .dockerignore  .env.example  Dockerfile  README.md  SUBTASK.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b8979fedcc3_add_approved_at.py  2baf6c46cde4_add_auth_columns.py  c927b8850f78_initial_tables.py
app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  token.py
app/clients/: anthropic.py  redis.py  slack_bot.py  tersecontext.py
app/engine/: fracture_consumer.py  notifier.py  query_builder.py  queue.py  researcher.py
app/routes/: repos.py  tasks.py  users.py
breakdown-plans/: CLAUDE.md  PLAN.md
breakdown-plans/0-scaffold/: CLAUDE.md
breakdown-plans/1-database/: CLAUDE.md
breakdown-plans/2a-tc-client/: CLAUDE.md
breakdown-plans/2b-anthropic-client/: CLAUDE.md
breakdown-plans/2c-auth/: CLAUDE.md
breakdown-plans/3-task-engine/: CLAUDE.md
breakdown-plans/4b-slack-bot/: CLAUDE.md
breakdown-plans/5-docker/: CLAUDE.md
breakdown-plans/6-tests/: CLAUDE.md
docs/superpowers/plans/: 2026-03-31-task-engine.md  2026-04-01-auth-and-test-db.md  2026-04-01-docker-containerization.md  (+3 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
tests/: conftest.py  test_auth.py  test_fracture_consumer.py  test_main.py  test_models.py  test_notifier.py  test_query_builder.py  test_queue.py  test_redis_client.py  test_repos.py  test_researcher.py  test_slack_bot.py  test_tasks.py  test_tc_client.py  test_token.py
(+12 files in other folders)
