[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breakdown"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "anthropic>=0.29.0",
    "claude-agent-sdk>=0.1.0",
    "slack-bolt>=1.18.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "slack-sdk>=3.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
